--- a/docs/v2/P1.md
+++ b/docs/v2/P1.md
@@ -4,6 +4,7 @@
 > **目标**：构成产品核心价值的主要功能  
 > **预计时间**：2-3周（在P0完成后开始）  
 > **状态图例**：✅ 已完成 | 🚧 进行中 | ⏳ 待开始
+> **架构说明**：三个主要功能模块（Collections、Templates、Sessions）在同一页面内通过Tab切换显示
 
 ---
 
