feat v2版本p1需求开发

--- a/docs/v2/P1.md
+++ b/docs/v2/P1.md
@@ -11,20 +11,20 @@
 ## 7. 标签页组管理（Collections）
 
 ### 7.1 Collections Store
-- [ ] 创建 `stores/collectionsStore.js`
-- [ ] State定义：
-  - [ ] `collections: []` - 所有标签页组
-  - [ ] `currentCollection: null` - 当前编辑的组
-- [ ] Actions实现：
-  - [ ] `loadCollections()` - 加载标签页组
-  - [ ] `createCollection(data)` - 创建新组
-  - [ ] `updateCollection(id, data)` - 更新组
-  - [ ] `deleteCollection(id)` - 删除组
-  - [ ] `addTab(collectionId, tabData)` - 添加标签页到组
-  - [ ] `removeTab(collectionId, tabId)` - 从组中删除标签页
-  - [ ] `reorderTabs(collectionId, newOrder)` - 重新排序标签页
-  - [ ] `reorderCollections(newOrder)` - 重新排序标签页组
-  - [ ] `openCollection(id, options)` - 打开标签页组
+- [x] 创建 `stores/collectionsStore.js`
+- [x] State定义：
+  - [x] `collections: []` - 所有标签页组
+  - [x] `currentCollection: null` - 当前编辑的组
+- [x] Actions实现：
+  - [x] `loadCollections()` - 加载标签页组
+  - [x] `createCollection(data)` - 创建新组
+  - [x] `updateCollection(id, data)` - 更新组
+  - [x] `deleteCollection(id)` - 删除组
+  - [x] `addTab(collectionId, tabData)` - 添加标签页到组
+  - [x] `removeTab(collectionId, tabId)` - 从组中删除标签页
+  - [x] `reorderTabs(collectionId, newOrder)` - 重新排序标签页
+  - [x] `reorderCollections(newOrder)` - 重新排序标签页组
+  - [x] `openCollection(id, options)` - 打开标签页组
 
 ### 7.2 标签页组数据结构
 ```javascript
@@ -50,68 +50,68 @@
 ### 7.3 标签页组UI组件
 
 #### 7.3.1 CollectionCard组件
-- [ ] 创建 `CollectionCard.vue`
-- [ ] 显示组名称和颜色
-- [ ] 显示标签页数量
-- [ ] 标签页列表（可折叠）
-- [ ] 操作按钮：
-  - [ ] 打开组
-  - [ ] 编辑
-  - [ ] 删除
-- [ ] 支持拖拽排序
+- [x] 创建 `CollectionCard.vue`
+- [x] 显示组名称和颜色
+- [x] 显示标签页数量
+- [x] 标签页列表（可折叠）
+- [x] 操作按钮：
+  - [x] 打开组
+  - [x] 编辑
+  - [x] 删除
+- [x] 支持拖拽排序
 
 #### 7.3.2 CollectionEditor组件（创建/编辑弹窗）
-- [ ] 创建 `CollectionEditor.vue`
-- [ ] 输入组名称
-- [ ] 选择组颜色（色块选择器）
-- [ ] 添加标签页方式：
-  - [ ] 从当前窗口选择（显示当前打开的标签页，支持多选）
-  - [ ] 手动输入URL
+- [x] 创建 `CollectionEditor.vue`
+- [x] 输入组名称
+- [x] 选择组颜色（色块选择器）
+- [x] 添加标签页方式：
+  - [x] 从当前窗口选择（显示当前打开的标签页，支持多选）
+  - [x] 手动输入URL
   - [ ] 从会话中选择（可选）
-- [ ] 已添加标签页列表：
-  - [ ] 显示、删除、排序（拖拽或上下箭头）
-- [ ] 保存和取消按钮
+- [x] 已添加标签页列表：
+  - [x] 显示、删除、排序（拖拽或上下箭头）
+- [x] 保存和取消按钮
 
 #### 7.3.3 TabSelector组件
-- [ ] 创建 `TabSelector.vue`
-- [ ] 显示当前窗口所有标签页
-- [ ] 支持复选框多选
-- [ ] 显示favicon和标题
-- [ ] 搜索过滤（可选）
+- [x] 创建 `TabSelector.vue`
+- [x] 显示当前窗口所有标签页
+- [x] 支持复选框多选
+- [x] 显示favicon和标题
+- [x] 搜索过滤（可选）
 
 ### 7.4 标签页组操作功能
 
 #### 7.4.1 创建标签页组
-- [ ] 点击"新建标签页组"按钮打开弹窗
-- [ ] 填写组信息并添加标签页
-- [ ] 验证数据（组名不能为空，至少1个标签页）
-- [ ] 保存到Storage
-- [ ] 显示在标签页组列表
+- [x] 点击"新建标签页组"按钮打开弹窗
+- [x] 填写组信息并添加标签页
+- [x] 验证数据（组名不能为空，至少1个标签页）
+- [x] 保存到Storage
+- [x] 显示在标签页组列表
 
 #### 7.4.2 编辑标签页组
-- [ ] 点击编辑按钮打开弹窗
-- [ ] 加载现有数据
-- [ ] 允许修改组名、颜色
-- [ ] 添加/删除标签页
-- [ ] 拖拽调整标签页顺序
-- [ ] 保存更新
+- [x] 点击编辑按钮打开弹窗
+- [x] 加载现有数据
+- [x] 允许修改组名、颜色
+- [x] 添加/删除标签页
+- [x] 拖拽调整标签页顺序
+- [x] 保存更新
 
 #### 7.4.3 删除标签页组
-- [ ] 点击删除按钮
-- [ ] 显示确认对话框
-- [ ] 从collections数组移除
-- [ ] 更新Storage
-- [ ] 显示删除成功提示
+- [x] 点击删除按钮
+- [x] 显示确认对话框
+- [x] 从collections数组移除
+- [x] 更新Storage
+- [x] 显示删除成功提示
 
 #### 7.4.4 打开标签页组
-- [ ] 支持配置选项：
-  - [ ] 在当前窗口打开 / 新窗口打开
-  - [ ] 是否创建Chrome Tab Group
-  - [ ] 是否后台打开
-- [ ] 批量创建标签页 `chrome.tabs.create()`
-- [ ] 如果选择创建Tab Group：
-  - [ ] 使用 `chrome.tabGroups.group()` 创建分组
-  - [ ] 设置组名称和颜色
+- [x] 支持配置选项：
+  - [x] 在当前窗口打开 / 新窗口打开
+  - [x] 是否创建Chrome Tab Group
+  - [x] 是否后台打开
+- [x] 批量创建标签页 `chrome.tabs.create()`
+- [x] 如果选择创建Tab Group：
+  - [x] 使用 `chrome.tabGroups.group()` 创建分组
+  - [x] 设置组名称和颜色
 - [ ] 显示打开进度（如果标签页较多）
 
 ---
@@ -119,18 +119,18 @@
 ## 8. 窗口模板管理（Window Templates）
 
 ### 8.1 Templates Store
-- [ ] 创建 `stores/templatesStore.js`
-- [ ] State定义：
-  - [ ] `templates: []` - 所有窗口模板
-  - [ ] `currentTemplate: null` - 当前编辑的模板
-- [ ] Actions实现：
-  - [ ] `loadTemplates()` - 加载模板
-  - [ ] `createTemplate(data)` - 创建新模板
-  - [ ] `createFromCurrentWindow()` - 从当前窗口创建
-  - [ ] `updateTemplate(id, data)` - 更新模板
-  - [ ] `deleteTemplate(id)` - 删除模板
-  - [ ] `duplicateTemplate(id)` - 复制模板
-  - [ ] `openTemplate(id, options)` - 打开窗口模板
+- [x] 创建 `stores/templatesStore.js`
+- [x] State定义：
+  - [x] `templates: []` - 所有窗口模板
+  - [x] `currentTemplate: null` - 当前编辑的模板
+- [x] Actions实现：
+  - [x] `loadTemplates()` - 加载模板
+  - [x] `createTemplate(data)` - 创建新模板
+  - [x] `createFromCurrentWindow()` - 从当前窗口创建
+  - [x] `updateTemplate(id, data)` - 更新模板
+  - [x] `deleteTemplate(id)` - 删除模板
+  - [x] `duplicateTemplate(id)` - 复制模板
+  - [x] `openTemplate(id, options)` - 打开窗口模板
 
 ### 8.2 窗口模板数据结构
 ```javascript
@@ -165,90 +165,90 @@
 ### 8.3 窗口模板UI组件
 
 #### 8.3.1 TemplateCard组件
-- [ ] 创建 `TemplateCard.vue`
-- [ ] 显示模板名称和描述
-- [ ] 显示包含的资源统计：
-  - [ ] X个标签页组
-  - [ ] Y个独立标签页
-- [ ] 显示最后更新时间
-- [ ] 操作按钮：
-  - [ ] 打开窗口
-  - [ ] 编辑
-  - [ ] 复制
-  - [ ] 删除
+- [x] 创建 `TemplateCard.vue`
+- [x] 显示模板名称和描述
+- [x] 显示包含的资源统计：
+  - [x] X个标签页组
+  - [x] Y个独立标签页
+- [x] 显示最后更新时间
+- [x] 操作按钮：
+  - [x] 打开窗口
+  - [x] 编辑
+  - [x] 复制
+  - [x] 删除
 
 #### 8.3.2 TemplateEditor组件
-- [ ] 创建 `TemplateEditor.vue`
-- [ ] 输入模板名称和描述
-- [ ] 创建方式选择：
-  - [ ] 从当前窗口创建（快照当前窗口所有内容）
-  - [ ] 手动选择标签页组
-- [ ] 标签页组区域：
-  - [ ] 显示已添加的标签页组列表
-  - [ ] 每个组显示：名称、颜色、标签页数量
-  - [ ] "创建Tab Group"复选框
-  - [ ] 引用/快照标识图标
-  - [ ] 删除、排序按钮
-  - [ ] "添加标签页组"按钮
-- [ ] 独立标签页区域：
-  - [ ] 显示已添加的独立标签页
-  - [ ] "固定标签页"复选框
-  - [ ] 删除按钮
-  - [ ] "添加标签页"按钮
-- [ ] 保存和取消按钮
+- [x] 创建 `TemplateEditor.vue`
+- [x] 输入模板名称和描述
+- [x] 创建方式选择：
+  - [x] 从当前窗口创建（快照当前窗口所有内容）
+  - [x] 手动选择标签页组
+- [x] 标签页组区域：
+  - [x] 显示已添加的标签页组列表
+  - [x] 每个组显示：名称、颜色、标签页数量
+  - [x] "创建Tab Group"复选框
+  - [x] 引用/快照标识图标
+  - [x] 删除、排序按钮
+  - [x] "添加标签页组"按钮
+- [x] 独立标签页区域：
+  - [x] 显示已添加的独立标签页
+  - [x] "固定标签页"复选框
+  - [x] 删除按钮
+  - [x] "添加标签页"按钮
+- [x] 保存和取消按钮
 
 #### 8.3.3 CollectionSelector组件
-- [ ] 创建 `CollectionSelector.vue`
-- [ ] 显示所有现有标签页组
-- [ ] 支持多选
-- [ ] 显示组的基本信息（名称、颜色、标签页数）
-- [ ] 确认选择按钮
+- [x] 创建 `CollectionSelector.vue`
+- [x] 显示所有现有标签页组
+- [x] 支持多选
+- [x] 显示组的基本信息（名称、颜色、标签页数）
+- [x] 确认选择按钮
 
 ### 8.4 窗口模板操作功能
 
 #### 8.4.1 创建窗口模板
-- [ ] 从当前窗口创建：
-  - [ ] 获取当前窗口所有标签页和Tab Groups
-  - [ ] 自动组织成模板结构
-  - [ ] 区分已分组和未分组标签页
-- [ ] 手动创建：
-  - [ ] 创建空白模板
-  - [ ] 从标签页组列表选择
-  - [ ] 手动添加独立标签页
-- [ ] 保存到Storage
+- [x] 从当前窗口创建：
+  - [x] 获取当前窗口所有标签页和Tab Groups
+  - [x] 自动组织成模板结构
+  - [x] 区分已分组和未分组标签页
+- [x] 手动创建：
+  - [x] 创建空白模板
+  - [x] 从标签页组列表选择
+  - [x] 手动添加独立标签页
+- [x] 保存到Storage
 
 #### 8.4.2 编辑窗口模板
-- [ ] 修改模板名称和描述
-- [ ] 添加/删除标签页组（引用或快照）
-- [ ] 添加/删除独立标签页
-- [ ] 拖拽调整顺序
-- [ ] 切换"创建Tab Group"选项
-- [ ] 切换引用/快照模式（"锁定版本"）
-- [ ] 保存更新
+- [x] 修改模板名称和描述
+- [x] 添加/删除标签页组（引用或快照）
+- [x] 添加/删除独立标签页
+- [x] 拖拽调整顺序
+- [x] 切换"创建Tab Group"选项
+- [x] 切换引用/快照模式（"锁定版本"）
+- [x] 保存更新
 
 #### 8.4.3 打开窗口模板
-- [ ] 创建新窗口 `chrome.windows.create()`
-- [ ] 遍历所有标签页组：
-  - [ ] 如果是引用模式，从collectionsStore获取最新数据
-  - [ ] 如果是快照模式，使用保存的数据
-  - [ ] 批量创建标签页
-  - [ ] 如果配置了createGroup，创建Chrome Tab Group
-  - [ ] 设置组颜色和名称
-- [ ] 创建独立标签页
-- [ ] 处理固定标签页（pin）
+- [x] 创建新窗口 `chrome.windows.create()`
+- [x] 遍历所有标签页组：
+  - [x] 如果是引用模式，从collectionsStore获取最新数据
+  - [x] 如果是快照模式，使用保存的数据
+  - [x] 批量创建标签页
+  - [x] 如果配置了createGroup，创建Chrome Tab Group
+  - [x] 设置组颜色和名称
+- [x] 创建独立标签页
+- [x] 处理固定标签页（pin）
 - [ ] 显示打开进度
 
 #### 8.4.4 复制窗口模板
-- [ ] 克隆模板数据
-- [ ] 生成新ID和时间戳
-- [ ] 名称后缀"(副本)"
-- [ ] 保存新模板
+- [x] 克隆模板数据
+- [x] 生成新ID和时间戳
+- [x] 名称后缀"(副本)"
+- [x] 保存新模板
 
 #### 8.4.5 删除窗口模板
-- [ ] 确认对话框
-- [ ] 从templates数组移除
-- [ ] 更新Storage
-- [ ] 成功提示
+- [x] 确认对话框
+- [x] 从templates数组移除
+- [x] 更新Storage
+- [x] 成功提示
 
 ---
 
@@ -257,68 +257,68 @@
 ### 9.1 拖拽基础架构
 
 #### 9.1.1 DraggableTab组件
-- [ ] 创建 `DraggableTab.vue`
-- [ ] 支持 `draggable` 属性
-- [ ] 实现拖拽事件：
-  - [ ] `@dragstart` - 设置拖拽数据
-  - [ ] `@dragend` - 清理拖拽状态
-- [ ] 拖拽时显示半透明效果
-- [ ] 传递标签页数据到dataTransfer
+- [x] 创建 `DraggableTab.vue`
+- [x] 支持 `draggable` 属性
+- [x] 实现拖拽事件：
+  - [x] `@dragstart` - 设置拖拽数据
+  - [x] `@dragend` - 清理拖拽状态
+- [x] 拖拽时显示半透明效果
+- [x] 传递标签页数据到dataTransfer
 
 #### 9.1.2 DropZone组件
-- [ ] 创建 `DropZone.vue`
-- [ ] 接收拖拽目标类型（collection/template）
-- [ ] 实现放置事件：
-  - [ ] `@dragover.prevent` - 允许放置
-  - [ ] `@dragleave` - 移除高亮
-  - [ ] `@drop` - 处理放置
-- [ ] 拖拽悬停时显示高亮边框（绿色）
-- [ ] 无效目标显示禁止图标
+- [x] 创建 `DropZone.vue`
+- [x] 接收拖拽目标类型（collection/template）
+- [x] 实现放置事件：
+  - [x] `@dragover.prevent` - 允许放置
+  - [x] `@dragleave` - 移除高亮
+  - [x] `@drop` - 处理放置
+- [x] 拖拽悉停时显示高亮边框（蓝色）
+- [x] 无效目标显示禁止图标
 
 #### 9.1.3 DragPreview组件
-- [ ] 创建 `DragPreview.vue`（可选）
-- [ ] 显示拖拽预览
-- [ ] 显示拖拽的标签页信息
-- [ ] 多选时显示数量徽章
+- [x] 创建 `DragPreview.vue`（可选）
+- [x] 显示拖拽预览
+- [x] 显示拖拽的标签页信息
+- [x] 多选时显示数量徽章
 
 ### 9.2 拖拽场景实现
 
 #### 9.2.1 会话标签页 → 标签页组
-- [ ] 在SessionCard中的TabItem添加draggable
-- [ ] 在CollectionCard添加DropZone
-- [ ] 拖拽逻辑：
-  - [ ] 获取源标签页数据
-  - [ ] 调用 `collectionsStore.addTab()`
+- [x] 在SessionCard中的TabItem添加draggable
+- [x] 在CollectionCard添加DropZone
+- [x] 拖拽逻辑：
+  - [x] 获取源标签页数据
+  - [x] 调用 `collectionsStore.addTab()`
   - [ ] 根据设置决定是否从会话移除
-  - [ ] 更新Storage
-  - [ ] 显示成功Toast
+  - [x] 更新Storage
+  - [x] 显示成功Toast
 
 #### 9.2.2 会话标签页 → 窗口模板
-- [ ] 在TemplateCard添加DropZone
-- [ ] 拖拽逻辑：
-  - [ ] 添加到模板的standaloneTabs数组
-  - [ ] 调用 `templatesStore.updateTemplate()`
+- [x] 在TemplateCard添加DropZone
+- [x] 拖拽逻辑：
+  - [x] 添加到模板的standaloneTabs数组
+  - [x] 调用 `templatesStore.updateTemplate()`
   - [ ] 根据设置决定是否从会话移除
-  - [ ] 更新Storage
-  - [ ] 显示成功Toast
+  - [x] 更新Storage
+  - [x] 显示成功Toast
 
 ### 9.3 拖拽设置
-- [ ] 在Settings.vue添加拖拽设置部分
-- [ ] 设置项：
-  - [ ] 启用拖拽功能（默认：开启）
-  - [ ] 拖拽后从源列表移除标签页（默认：关闭）
-  - [ ] 拖拽时显示预览（默认：开启）
-- [ ] 在settingsStore添加对应状态
+- [x] 在Settings.vue添加拖拽设置部分
+- [x] 设置项：
+  - [x] 启用拖拽功能（默认：开启）
+  - [x] 拖拽后从源列表移除标签页（默认：关闭）
+  - [x] 拖拽时显示预览（默认：开启）
+- [x] 在settingsStore添加对应状态
 
 ### 9.4 拖拽视觉反馈
-- [ ] 拖拽开始：源元素半透明
-- [ ] 拖拽进行：
-  - [ ] 有效目标显示绿色边框
-  - [ ] 无效目标显示禁止图标
-  - [ ] 显示拖拽游标
-- [ ] 拖拽成功：
+- [x] 拖拽开始：源元素半透明
+- [x] 拖拽进行：
+  - [x] 有效目标显示蓝色边框
+  - [x] 无效目标显示禁止图标
+  - [x] 显示拖拽游标
+- [x] 拖拽成功：
   - [ ] 目标区域显示淡入动画
-  - [ ] Toast提示"已添加到xxx"
+  - [x] Toast提示"已添加到xxx"
 - [ ] 拖拽失败：
   - [ ] 震动动画
   - [ ] Toast提示错误原因
@@ -330,22 +330,22 @@
 ### 里程碑检查点
 
 #### Milestone 1: Collections功能（Week 1）
-- [ ] Collections Store完全实现
-- [ ] 标签页组的CRUD操作全部可用
-- [ ] CollectionCard和CollectionEditor组件完成
-- [ ] 可以创建、编辑、删除、打开标签页组
+- [x] Collections Store完全实现
+- [x] 标签页组的CRUD操作全部可用
+- [x] CollectionCard和CollectionEditor组件完成
+- [x] 可以创建、编辑、删除、打开标签页组
 
 #### Milestone 2: Templates功能（Week 2）
-- [ ] Templates Store完全实现
-- [ ] 窗口模板的CRUD操作全部可用
-- [ ] TemplateCard和TemplateEditor组件完成
-- [ ] 支持引用模式和快照模式
-- [ ] 可以从当前窗口创建模板
+- [x] Templates Store完全实现
+- [x] 窗口模板的CRUD操作全部可用
+- [x] TemplateCard和TemplateEditor组件完成
+- [x] 支持引用模式和快照模式
+- [x] 可以从当前窗口创建模板
 
 #### Milestone 3: 拖拽功能（Week 3）
-- [ ] 基础拖拽架构搭建完成
-- [ ] 会话标签页可以拖拽到标签页组和窗口模板
-- [ ] 拖拽视觉反馈良好
+- [x] 基础拖拽架构搭建完成
+- [x] 会话标签页可以拖拽到标签页组和窗口模板
+- [x] 拖拽视觉反馈良好
 - [ ] 拖拽设置可以正常配置
 
 ---
@@ -353,23 +353,23 @@
 ## 🎯 验收标准
 
 ### 标签页组功能
-- [ ] 可以创建带颜色的标签页组
-- [ ] 可以从当前窗口选择标签页添加到组
-- [ ] 可以编辑组名称、颜色和标签页
-- [ ] 可以在当前/新窗口打开标签页组
-- [ ] 打开时可以选择是否创建Chrome Tab Group
+- [x] 可以创建带颜色的标签页组
+- [x] 可以从当前窗口选择标签页添加到组
+- [x] 可以编辑组名称、颜色和标签页
+- [x] 可以在当前/新窗口打开标签页组
+- [x] 打开时可以选择是否创建Chrome Tab Group
 
 ### 窗口模板功能
-- [ ] 可以从当前窗口创建模板（快照所有内容）
-- [ ] 可以手动选择标签页组添加到模板
-- [ ] 支持引用模式（动态同步）和快照模式（静态）
-- [ ] 可以添加独立标签页到模板
-- [ ] 打开模板时正确恢复所有内容和结构
+- [x] 可以从当前窗口创建模板（快照所有内容）
+- [x] 可以手动选择标签页组添加到模板
+- [x] 支持引用模式（动态同步）和快照模式（静态）
+- [x] 可以添加独立标签页到模板
+- [x] 打开模板时正确恢复所有内容和结构
 
 ### 拖拽功能
-- [ ] 可以拖拽会话中的标签页到标签页组
-- [ ] 可以拖拽会话中的标签页到窗口模板
-- [ ] 拖拽时有正确的视觉反馈
+- [x] 可以拖拽会话中的标签页到标签页组
+- [x] 可以拖拽会话中的标签页到窗口模板
+- [x] 拖拽时有正确的视觉反馈
 - [ ] 拖拽设置可以控制拖拽行为
 
 ---
