feat 添加深色模式

--- a/docs/v2/P3.md
+++ b/docs/v2/P3.md
@@ -10,9 +10,9 @@
 ## 18. 主题自定义
 
 ### 18.1 主题切换
-- [ ] 亮色主题（默认）
-- [ ] 暗色主题
-- [ ] 跟随系统
+- [x] 亮色主题（默认）
+- [x] 暗色主题
+- [x] 跟随系统
 - [ ] 自动切换（时间段）
 
 ### 18.2 自定义颜色
@@ -21,22 +21,28 @@
 - [ ] 导入/导出主题配置
 
 ### 18.3 主题Store
-- [ ] 创建 `stores/themeStore.js`
-- [ ] State定义：
-  - [ ] `currentTheme: 'light'` - 当前主题
+- [x] 创建 `stores/themeStore.js`
+- [x] State定义：
+  - [x] `currentTheme: 'light'` - 当前主题
+  - [x] `followSystem: false` - 跟随系统
   - [ ] `autoSwitch: false` - 自动切换
   - [ ] `customColors: {}` - 自定义颜色
-- [ ] Actions实现：
-  - [ ] `loadTheme()` - 加载主题
-  - [ ] `setTheme(name)` - 设置主题
+- [x] Actions实现：
+  - [x] `loadTheme()` - 加载主题
+  - [x] `setTheme(name)` - 设置主题
+  - [x] `setFollowSystem(follow)` - 设置跟随系统
+  - [x] `detectSystemTheme()` - 检测系统主题
+  - [x] `applyTheme()` - 应用主题
   - [ ] `updateCustomColors(colors)` - 更新自定义颜色
 
 ### 18.4 主题实现
-- [ ] 使用CSS变量实现主题切换
-- [ ] 在根元素添加theme class
-- [ ] 定义亮色主题变量
-- [ ] 定义暗色主题变量
-- [ ] 平滑过渡动画
+- [x] 使用CSS变量实现主题切换
+- [x] 在根元素添加theme class
+- [x] 定义亮色主题变量
+- [x] 定义暗色主题变量
+- [x] 平滑过渡动画
+- [x] 在Settings页面添加主题切换UI
+- [ ] 完全适配所有组件使用CSS变量
 
 ---
 
